--- a/vignettes/anotherl.tex
+++ b/vignettes/anotherl.tex
@@ -5,7 +5,7 @@
 
 This is an exemplary document that is made.
 
-\input{another}
-\input{test1}
+\include{another}
+\include{test1}
 
 \end{document}
